# ira

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
doc/: relazione.odt  relazione_uni.odt
m4/: ipp.m4
test/: Makefile.am  fft  fft.cc  fft_th.cc  int  int.cc  lambda  multi  siggen.cc  subject  time.cc
test/.deps/: fft-fft.Po
